fixing alignment

--- a/src/odcgi/var/www/themes/default/main.css
+++ b/src/odcgi/var/www/themes/default/main.css
@@ -68,6 +68,7 @@ li .imgframe {
 	display: table-cell;	
 	width: 50%;
 	padding-left: 5px;
+	vertical-align: middle;
 }
 .detailed ul li p{
 	display: table-cell;
